@@ -10,6 +10,9 @@ apt (0.9.7.8~exp2+nmu1) UNRELEASED; urgency=low
       version strings e.g. for implicit multi-arch dependencies
     - equal comparisions are used mostly in same-source relations,
       so use this to try to reuse some version strings
+    - sort group and package names in the hashtable on insert
+  * apt-pkg/pkgcache.cc:
+    - assume sorted hashtable entries for groups/packages
   * apt-pkg/deb/debversion.cc:
     - add a string-equal shortcut for equal version comparisions
 
